# coding-interviews

./: .gitignore  README.md  pyproject.toml
ch2/10/: number_of_1_in_binary.py
ch2/2/: singleton.py
ch2/3/: find_in_partially_sorted_matrix.py
ch2/4/: replace_blank.py
ch2/6/: construct_binary_tree.py
ch2/7/: queue_with_two_stacks.py
ch3/13/: delete_node_in_list.py
ch3/15/: kth_node_from_end.py
ch3/16/: reverse_list.py
coding_interviews/: 03_find_in_partially_sorted_matrix.py  04_replace_blank.py  08_quick_sort.py  09_fibonacci.py  17_merge_sorted_lists.py  21_min_in_stack.py  22_stack_push_pop_order.py  25_path_in_tree.py  27_convert_binary_search_tree.py  28_string_permutation.py  30_k_least_numbers.py  33_sort_array_for_min_number.py  p_02_singleton.py
src/: 05_print_list_reversed.py  08_min_number_in_rotated_array.py  11_power.py  12_print_1_to_max_of_n_digits.py  13_delete_node_in_list.py  14_reorder_array.py  15_kth_node_from_end.py  18_substructure_in_tree.py  19_mirror_of_binary_tree.py  20_print_matrix.py  22_stack_push_pop_order.py  23_print_from_top_to_bottom.py  24_sequence_of_bts.py  29_more_than_half_number.py  31_greatest_sum_of_subarrays.py  34_ugly_number.py
tests/: test_02_singleton.py
