[project]
name = "coding_interviews"
version = "0.0.1"
dependencies = []
authors = [
    {name = "mookrs"}
]
requires-python = ">=3.10"
license = {text = "MIT"}

[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.1.2",
]
dev = [
    "black>=22.6.0",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
