[project]
name = "coding-interviews"
version = "0.0.1"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]

[tool.pdm.dev-dependencies]
dev = [
    "isort>=5.10.1",
    "black>=22.6.0",
]
test = [
    "pytest>=7.1.2",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
